@@ -1093,7 +1093,7 @@ public class FightRequest
 				int initialRound = FightRequest.currentRound;
 
 				Object[] parameters = new Object[3];
-				parameters[0] = new Integer( FightRequest.currentRound );
+				parameters[0] = Integer.valueOf( FightRequest.currentRound );
 				parameters[1] = MonsterStatusTracker.getLastMonster();
 				parameters[2] = FightRequest.lastResponseText;
 
